--- a/index.html
+++ b/index.html
@@ -1,38 +1,80 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset=utf-8 />
-<title>Poetry Boxes in Portland</title>
-<meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
-<script src='https://api.tiles.mapbox.com/mapbox.js/v2.1.5/mapbox.js'></script>
-<link href='https://api.tiles.mapbox.com/mapbox.js/v2.1.5/mapbox.css' rel='stylesheet' />
-<style>
-  body { margin:0; padding:0; }
-  #map { position:absolute; top:0; bottom:0; width:100%; }
-</style>
+	<meta charset=utf-8 />
+	<title>Poetry Boxes in Portland</title>
+	<meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+	<script src='https://api.tiles.mapbox.com/mapbox.js/v2.1.5/mapbox.js'></script>
+	<link href='https://api.tiles.mapbox.com/mapbox.js/v2.1.5/mapbox.css' rel='stylesheet' />
+	<link rel="stylesheet" href="css/pobox.css">
 </head>
+
 <body>
 
-<div id='map'></div>
-<script>
-L.mapbox.accessToken = 'pk.eyJ1IjoiZWxzZXdpc2UiLCJhIjoiWGpDbG9RYyJ9.ZqfX-6R6-tOEvTagnLj60A';
-var map = L.mapbox.map('map', 'elsewise.lbij32pa')
-    .setView([45.51, -122.7], 12);
-	var featureLayer = L.mapbox.featureLayer()
-	    .loadURL('http://poetrybox.info/poetry-boxes150301.geojson')
-		.on('ready', function(layer) {
-			this.eachLayer(function(marker) {
-				// adapted from: 
-				// https://www.mapbox.com/mapbox.js/example/v1.0.0/markers-from-csv-custom-style/
-				marker.setIcon(L.mapbox.marker.icon({
-					'marker-color': '#9c713d',
-					'marker-size': 'medium',
-					'marker-symbol': 'building'
-				}));
-			});
-		})
-	    .addTo(map);
-</script>
+	<div id='map'></div>
+	<a href='#' id='location-button'>Show My Location</a>
+
+	<script>
+	L.mapbox.accessToken = 'pk.eyJ1IjoiZWxzZXdpc2UiLCJhIjoiWGpDbG9RYyJ9.ZqfX-6R6-tOEvTagnLj60A';
+	var map = L.mapbox.map('map', 'elsewise.lbij32pa')
+	    .setView([45.51, -122.7], 12);
+		var featureLayer = L.mapbox.featureLayer()
+		    .loadURL('http://poetrybox.info/poetry-boxes150301.geojson')
+			.on('ready', function(layer) {
+				this.eachLayer(function(marker) {
+					// adapted from: 
+					// https://www.mapbox.com/mapbox.js/example/v1.0.0/markers-from-csv-custom-style/
+					marker.setIcon(L.mapbox.marker.icon({
+						'marker-color': '#9c713d',
+						'marker-size': 'medium',
+						'marker-symbol': 'building'
+					}));
+				});
+			})
+		    .addTo(map);
+	
+	// adapted from:
+	// https://www.mapbox.com/mapbox.js/example/v1.0.0/geolocation/
+	var geolocationLayer = L.mapbox.featureLayer().addTo(map);
+	var locationButton = document.getElementById('location-button');
+	
+	if (!navigator.geolocation) {
+	    locationButton.innerHTML = "Location not available";
+	} else {
+	    locationButton.onclick = function (e) {
+	        e.preventDefault();
+	        e.stopPropagation();
+	        map.locate();
+	    };
+	}
+	
+	map.on('locationfound', function(e) {
+	    
+		map.fitBounds(e.bounds);
+
+	    geolocationLayer.setGeoJSON({
+	        type: 'Feature',
+	        geometry: {
+	            type: 'Point',
+	            coordinates: [e.latlng.lng, e.latlng.lat]
+	        },
+	        properties: {
+	            'title': 'You',
+	            'marker-color': '#f7c873',
+	            'marker-symbol': 'star'
+	        }
+	    });
+		
+		locationButton.innerHTML = "Update Location";
+	});
+
+	map.on('locationerror', function() {
+	    locationButton.innerHTML = 'Unknown...';
+	});
+	
+	</script>
 
 </body>
+
 </html>
